// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
{
  "instance": null,
  "nodeType": "component",
  "props": {
    "inputValue": "",
    "submitAction": [MockFunction],
  },
  "rendered": {
    "instance": null,
    "nodeType": "host",
    "props": {
      "children": [
        <div
          className="actions"
        >
          <React.Fragment>
            <div
              className="row"
            />
            <div
              className="row column"
            >
              <button
                aria-label=""
                className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                data-testid="login-submit-btn"
                disabled={true}
                formNoValidate={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  {
                    "background": "",
                    "color": "#666",
                  }
                }
                tabIndex={-1}
                type="submit"
              >
                
              </button>
            </div>
          </React.Fragment>
        </div>,
        false,
      ],
      "id": "actionable-buttons",
      "style": {
        "margin": "24px 0",
      },
    },
    "rendered": [
      {
        "instance": null,
        "nodeType": "host",
        "props": {
          "children": <React.Fragment>
            <div
              className="row"
            />
            <div
              className="row column"
            >
              <button
                aria-label=""
                className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                data-testid="login-submit-btn"
                disabled={true}
                formNoValidate={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  {
                    "background": "",
                    "color": "#666",
                  }
                }
                tabIndex={-1}
                type="submit"
              >
                
              </button>
            </div>
          </React.Fragment>,
          "className": "actions",
        },
        "rendered": [
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "children": false,
              "className": "row",
            },
            "rendered": [],
            "type": "div",
          },
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "children": <button
                aria-label=""
                className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                data-testid="login-submit-btn"
                disabled={true}
                formNoValidate={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  {
                    "background": "",
                    "color": "#666",
                  }
                }
                tabIndex={-1}
                type="submit"
              >
                
              </button>,
              "className": "row column",
            },
            "rendered": [
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "aria-label": "",
                  "children": "",
                  "className": "pretty gold login focus-visible keeper-outfit outfit-body-medium",
                  "data-testid": "login-submit-btn",
                  "disabled": true,
                  "formNoValidate": true,
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "style": {
                    "background": "",
                    "color": "#666",
                  },
                  "tabIndex": -1,
                  "type": "submit",
                },
                "rendered": [],
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  "type": [Function],
}
`;

exports[`renders 2`] = `
{
  "instance": null,
  "nodeType": "component",
  "props": {
    "children": <ActionButtons
      inputValue=""
      submitAction={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
    />,
    "store": {
      "dispatch": [Function],
      "getState": [Function],
      "subscribe": [Function],
    },
  },
  "rendered": {
    "instance": null,
    "nodeType": "component",
    "props": {
      "inputValue": "",
      "submitAction": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "rendered": {
      "instance": null,
      "nodeType": "host",
      "props": {
        "children": [
          <div
            className="actions"
          >
            <React.Fragment>
              <div
                className="row"
              />
              <div
                className="row column"
              >
                <button
                  aria-label=""
                  className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                  data-testid="login-submit-btn"
                  disabled={true}
                  formNoValidate={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    {
                      "background": "",
                      "color": "#666",
                    }
                  }
                  tabIndex={-1}
                  type="submit"
                >
                  
                </button>
              </div>
            </React.Fragment>
          </div>,
          false,
        ],
        "id": "actionable-buttons",
        "style": {
          "margin": "24px 0",
        },
      },
      "rendered": [
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "children": <React.Fragment>
              <div
                className="row"
              />
              <div
                className="row column"
              >
                <button
                  aria-label=""
                  className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                  data-testid="login-submit-btn"
                  disabled={true}
                  formNoValidate={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    {
                      "background": "",
                      "color": "#666",
                    }
                  }
                  tabIndex={-1}
                  type="submit"
                >
                  
                </button>
              </div>
            </React.Fragment>,
            "className": "actions",
          },
          "rendered": [
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "children": false,
                "className": "row",
              },
              "rendered": [],
              "type": "div",
            },
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "children": <button
                  aria-label=""
                  className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                  data-testid="login-submit-btn"
                  disabled={true}
                  formNoValidate={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    {
                      "background": "",
                      "color": "#666",
                    }
                  }
                  tabIndex={-1}
                  type="submit"
                >
                  
                </button>,
                "className": "row column",
              },
              "rendered": [
                {
                  "instance": null,
                  "nodeType": "host",
                  "props": {
                    "aria-label": "",
                    "children": "",
                    "className": "pretty gold login focus-visible keeper-outfit outfit-body-medium",
                    "data-testid": "login-submit-btn",
                    "disabled": true,
                    "formNoValidate": true,
                    "onClick": [Function],
                    "onKeyDown": [Function],
                    "style": {
                      "background": "",
                      "color": "#666",
                    },
                    "tabIndex": -1,
                    "type": "submit",
                  },
                  "rendered": [],
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  "type": [Function],
}
`;

exports[`renders 3`] = `
{
  "instance": null,
  "nodeType": "component",
  "props": {
    "children": <ActionButtons
      inputValue="foobazbar"
    />,
    "store": {
      "dispatch": [Function],
      "getState": [Function],
      "subscribe": [Function],
    },
  },
  "rendered": {
    "instance": null,
    "nodeType": "component",
    "props": {
      "inputValue": "foobazbar",
      "submitAction": undefined,
    },
    "rendered": {
      "instance": null,
      "nodeType": "host",
      "props": {
        "children": [
          <div
            className="actions"
          >
            <React.Fragment>
              <div
                className="row"
              />
              <div
                className="row column"
              >
                <button
                  aria-label=""
                  className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                  data-testid="login-submit-btn"
                  disabled={false}
                  formNoValidate={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    {
                      "background": "#FFC700",
                      "color": "",
                    }
                  }
                  tabIndex={0}
                  type="submit"
                >
                  
                </button>
              </div>
            </React.Fragment>
          </div>,
          false,
        ],
        "id": "actionable-buttons",
        "style": {
          "margin": "24px 0",
        },
      },
      "rendered": [
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "children": <React.Fragment>
              <div
                className="row"
              />
              <div
                className="row column"
              >
                <button
                  aria-label=""
                  className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                  data-testid="login-submit-btn"
                  disabled={false}
                  formNoValidate={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    {
                      "background": "#FFC700",
                      "color": "",
                    }
                  }
                  tabIndex={0}
                  type="submit"
                >
                  
                </button>
              </div>
            </React.Fragment>,
            "className": "actions",
          },
          "rendered": [
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "children": false,
                "className": "row",
              },
              "rendered": [],
              "type": "div",
            },
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "children": <button
                  aria-label=""
                  className="pretty gold login focus-visible keeper-outfit outfit-body-medium"
                  data-testid="login-submit-btn"
                  disabled={false}
                  formNoValidate={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    {
                      "background": "#FFC700",
                      "color": "",
                    }
                  }
                  tabIndex={0}
                  type="submit"
                >
                  
                </button>,
                "className": "row column",
              },
              "rendered": [
                {
                  "instance": null,
                  "nodeType": "host",
                  "props": {
                    "aria-label": "",
                    "children": "",
                    "className": "pretty gold login focus-visible keeper-outfit outfit-body-medium",
                    "data-testid": "login-submit-btn",
                    "disabled": false,
                    "formNoValidate": true,
                    "onClick": [Function],
                    "onKeyDown": [Function],
                    "style": {
                      "background": "#FFC700",
                      "color": "",
                    },
                    "tabIndex": 0,
                    "type": "submit",
                  },
                  "rendered": [],
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  "type": [Function],
}
`;
